Automatically backed up by Learn

--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -6,7 +6,7 @@
   <title>Nested Forms Lab!</title>
  </head>
 <body>
-  <form action="pirates" method="/post">
+  <form action="/pirates" method="post">
   <label for="pirate_name">Pirates Name</label><br>
   <input id="pirate_name" type="text" name="pirate[name]" /><br>
   <label for="pirate_weight">Weight</label><br>
