--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -9,24 +9,16 @@
 
 <h2>This is  your first ship details.</h2>
 <h1>Ship One</h1>
-<% @ships.each.with_index do |ship, index| %>
   <div class="ship">
-    <% if index == 0 %>
-    <p>Name: <%= ship.name%></p><br>
-    <p>Type: <%= ship.type %></p><br>
-    <p>Booty: <%= ship.booty %></p><br>
-    <% end %>
-  <% end %>
+    <p>Name: <%= @ships[0].name%></p><br>
+    <p>Type: <%= @ships[0].type %></p><br>
+    <p>Booty: <%= @ships[0].booty %></p><br>
   </div><br>
 
 <h2>And, your second ship details.</h2>
 <h1>Ship Two</h1>
-<% @ships.each.with_index do |ship, index| %>
   <div class="ship">
-    <%-- if index == 1 --%>
-    <p>Name: <%= ship.name %></p><br>
-    <p>Type: <%= ship.type %></p><br>
-    <p>Booty: <%= ship.booty %></p><br>
-    <%-- end --%>
-  <% end %>
+    <p>Name: <%= @ships[1].name %></p><br>
+    <p>Type: <%= @ships[1].type %></p><br>
+    <p>Booty: <%= @ships[1].booty %></p><br>
 </div><br>
