--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,34 @@
 <h1>Make your form here</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Nested Forms Lab!</title>
+ </head>
+<body>
+  <form action="/pirates" method="post">
+  <label for="pirate_name">Pirates Name</label><br>
+  <input id="pirate_name" type="text" name="pirate[name]" /><br>
+  <label for="pirate_weight">Weight</label><br>
+  <input id="pirate_weight" type="text" name="pirate[weight]" /><br>
+  <label for="pirate_height">Height</label><br>
+  <input id="pirate_height" type="text" name="pirate[height]" /><br><br>
+
+  <label for="ship_name_1">First Ship's Name:</label><br>
+    <input type="text" id="ship_name_1" name="pirate[ships][][name]"><br>
+    <label for="ship_type_1">First Ship's Type:</label><br>
+    <input type="text" id="ship_type_1" name="pirate[ships][][type]"><br>
+    <label for="ship_booty_1">First Ship's Booty:</label><br>
+    <input type="text" id="ship_booty_1" name="pirate[ships][][booty]"><br>
+
+    <label for="ship_name_2">Second Ship's Name:</label><br>
+    <input type="text" id="ship_name_2" name="pirate[ships][][name]"><br>
+    <label for="ship_type_2">Second Ship's Type:</label><br>
+    <input type="text" id="ship_type_2" name="pirate[ships][][type]"><br>
+    <label for="ship_booty_2">Second Ship's Booty:</label><br>
+    <input type="text" id="ship_booty_2" name="pirate[ships][][booty]"><br>
+
+     <input type="submit" value="Submit">
+  </form>
+</body>
+</html>
