--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,24 @@
-<h1>Display your Pirate here</h1>
+<!-- <h1>Display your Pirate here</h1> -->
+<h1> This your pirates info!</h1>
+<div class="pirate">
+  <h3>Name: <%= @pirate.name %></h3>
+  <h4>Weight: <%= @pirate.weight %> lbs</h4>
+  <h4>Height: <%= @pirate.height %> inches</h4>
+</div><br
 
 
-<h2>Display your first ship here</h2>
+<h2>This is  your first ship details.</h2>
+<h1>Ship One</h1>
+  <div class="ship">
+    <p>Name: <%= @ships[0].name%></p><br>
+    <p>Type: <%= @ships[0].type %></p><br>
+    <p>Booty: <%= @ships[0].booty %></p><br>
+  </div><br>
 
-
-<h2>Display your second ship here</h2>
+<h2>And, your second ship details.</h2>
+<h1>Ship Two</h1>
+  <div class="ship">
+    <p>Name: <%= @ships[1].name %></p><br>
+    <p>Type: <%= @ships[1].type %></p><br>
+    <p>Booty: <%= @ships[1].booty %></p><br>
+</div><br>
